# gamma-swap

./: Anchor.toml  Cargo.toml  Makefile.toml  package.json  tsconfig.json
client/: Cargo.toml
client/src/: main.rs
client/src/instructions/: amm_instructions.rs
cpi/cpmm-cpi/src/: lib.rs
cpi/dlmm-cpi/: Cargo.toml
cpi/dlmm-cpi/src/: lib.rs
gamma-wasm/: Cargo.toml
gamma-wasm/example/: wasm_test.ts
gamma-wasm/src/: lib.rs
programs/gamma/: Cargo.toml
programs/gamma/src/: error.rs  lib.rs
programs/gamma/src/curve/: calculator.rs  constant_product.rs  mod.rs  oracle_based_swap_calculator.rs
programs/gamma/src/fees/: dynamic_fee.rs  mod.rs
programs/gamma/src/instructions/: calculate_rewards.rs  claim_rewards.rs  create_rewards.rs  deposit.rs  init_user_pool_liquidity.rs  initialize.rs  migration.rs  mod.rs  oracle_based_swap_base_input.rs  oracle_price_update.rs  quote_swap.rs  rebalance.rs  swap_base_input.rs  swap_base_output.rs  withdraw.rs
programs/gamma/src/instructions/admin/: create_config.rs  create_referral_project.rs  migrate_reward_info.rs  mod.rs  realloc.rs  update_config.rs  update_pool.rs
programs/gamma/src/instructions/partner/: add.rs  claim.rs  initialize.rs  initialize_pool.rs  mod.rs  update.rs  update_fees.rs
programs/gamma/src/migration/: mod.rs
programs/gamma/src/migration/meteora/: dlmm_to_gamma.rs  meteora_dlmm_to_gamma.rs  mod.rs
programs/gamma/src/migration/orca/: mod.rs  modify_liquidity_v2.rs  orca_whirlpool_to_gamma.rs  orca_whirlpool_to_gamma_v2.rs
programs/gamma/src/migration/orca/util/: unpack.rs
programs/gamma/src/migration/raydium/: mod.rs  raydium_clmm_to_gamma.rs  raydium_clmm_to_gamma_v2.rs  raydium_cp_swap_to_gamma.rs
programs/gamma/src/states/: config.rs  events.rs  global_reward_info.rs  mod.rs  oracle.rs  partner.rs  pool.rs  reward_info.rs  user_pool_liquidity.rs  user_reward_info.rs
programs/gamma/src/utils/: mod.rs  resize_account.rs
programs/gamma/tests/: calculate_rewards.rs  jupiter_quotes2.rs  oracle_based_swaps.rs  partner_program.rs  swap_test.rs
programs/gamma/tests/utils/: jupiter2.rs  mod.rs
scripts/: migrateAllPool.ts  migrateAllRewardInfo.ts  migrateExistingPoolBoostedRewards.ts  printAllUserPoolWithBoostedRewards.ts  printallPool.ts
