[workspace]
members = [
    "programs/*",
    "client", 
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-client = { version = "0.29.0" }
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0" }
spl-associated-token-account= "2.0.0"
anyhow = "1"
arrayref = "0.3.7"
bincode = "1.3.3"
bs58 = { version = "0.5.0"}
bytemuck = "1.13"
clap = { version = "3", features = [ "derive", "env" ] }
colorful = "0.2.2"
configparser = "3.0.0"
criterion = "0.5"
default-boxed = "0.2.0"
dotenv = "0.15.0"
glob = "0.3.1"
hex = "0.4.3"
itertools = "0.11.0"
jupiter-amm-interface = "0.4.5"
once_cell = "1"
peace-lock = "0.1"
proptest = "1.0"
quickcheck = "0.9"
rand = "0.8.5"
referral = { git = "https://github.com/GooseFX1/gfx-referral.git", branch = "make-types-public", features = ["cpi"] }
regex = "1"
rust_decimal = { version = "1", features = ["maths", "c-repr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-account-decoder = "=1.16"
# solana-account-decoder = "1.17"
solana-client = "=1.16"
# solana-client = "1.17"
solana-program = "=1.16"
# solana-program = "1.17"
solana-program-runtime = "^1.16"
solana-program-test = "^1.16"
# solana-program-test = "1.17"
solana-sdk = "^1.16"
# solana-sdk = "1.17"
solana-security-txt = "1.1.1"
solana-transaction-status = "=1.16"
# solana-transaction-status = "1.17"
spl-math = { version = "0.2", features = ["no-entrypoint"] }
spl-memo = "4.0.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
spl-token-client = "0.7.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uint = "0.9.1"
url = "2"
zstd = "0.12"

solana-bpf-simulator = { git = "https://github.com/dovahcrow/solana-bpf-simulator" }

gamma = { path = "programs/gamma", features = ["no-entrypoint"] }

amm-anchor = { git = "https://github.com/raydium-io/raydium-contract-instructions", package = "amm-anchor" }
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", features = [
    "no-entrypoint",
    "cpi",
] }
raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", features = [
    "no-entrypoint",
    "cpi",
] }
dlmm = { git = "https://github.com/MeteoraAg/dlmm-sdk/", package = "lb_clmm", rev = "fb350c54ab1d023dc0819d1c4d89e882fabdbf75", features = [
    "cpi",
] }
dynamic-amm = { git = "https://github.com/mercurial-finance/mercurial-dynamic-amm-sdk", features = [
    "cpi",
], rev = "7be5237e9d688f83d40df71278fdbd6ec2d42979" }
